# MuseumOfMysteries

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CREDITS.md  DEVLOG.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
include/: Engine.h
include/Core/: Entity.h  Resources.h  Vec2.h
include/GUI/: Colors.h  Cursor.h  Window.h
include/IO/: File.h  Mouse.h
include/Render/: Animation.h  Sprite.h  Surface.h
src/: Engine.cpp  Game.cpp
src/Core/: Entity.cpp  Resources.cpp  Vec2.cpp
src/GUI/: Cursor.cpp  Window.cpp
src/IO/: File.cpp  Mouse.cpp
src/Render/: Animation.cpp  Sprite.cpp  Surface.cpp
